--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 class: center, middle
 
-# Title
+# FMOD + Unity
 
 ---
 
@@ -34,6 +34,8 @@ class: center, middle
 ---
 
 # Introduction
+
+![gif](https://media.giphy.com/media/oIkX7c4lt1Pxe/giphy.gif)
 
     </textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js">
