syntax highlighting test

--- a/index.html
+++ b/index.html
@@ -35,8 +35,13 @@ class: center, middle
 
 # Introduction
 
-![gif](https://media.giphy.com/media/oIkX7c4lt1Pxe/giphy.gif)
+```cs
+string name = "Flemming";
 
+if(name == "Flemming"){
+  Debug.Log("Hey, Flemming");
+}
+```
     </textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js">
     </script>
