--- a/index.html
+++ b/index.html
@@ -26,22 +26,65 @@ class: center, middle
 ---
 
 # Agenda
+## Mandag
 
-1. Introduction
-2. Deep-dive
-3. ...
+1. Installation
+2. Gennemgang af funktioner
 
 ---
 
-# Introduction
+# Agenda
+## Tirsdag
 
-```cs
-string name = "Flemming";
+1. Opsamling
+2. Implementation i egne projekter
+3. Evt. hjælp til andre programmeringsproblemer
 
-if(name == "Flemming"){
-  Debug.Log("Hey, Flemming");
-}
-```
+---
+
+# Installation
+
+Generel installation af pakken og hvordan man overtager lyd outputtet
+
+---
+
+# Sound banks
+
+Loading af sound banks
+
+---
+
+# Events
+
+Hvordan man starter og stopper et event
+
+---
+
+#  Snapshots
+
+Hvordan man starter et mixer snapshot
+Hvordan man stopper det
+(faktisk kan man også bare sende et almindeligt event og så have et mixer snapshot i det event)
+
+---
+
+# Parametre
+
+Hvordan man sender og opdaterer en parameter til et event
+
+---
+
+# Nice to know
+
+Lytte til lyd-events og gøre ting baseret på amplitude eller frekvens
+
+---
+
+# Forespørgsler
+
+- Rytmisk spil (info om BPM og underdelinger)
+- Avanceret anvendelse af spatializer (stealth)
+
     </textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js">
     </script>
